force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Budget_Amount_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Amount_Required__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Budget Amount is required, if this is set to true</description>
    <inlineHelpText>Budget Amount is required, if this is set to true</inlineHelpText>
    <label>Budget Amount Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>