force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Budget_Def_using_Existing_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Def_using_Existing_Expense_Amount__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if checked, budget default using existing expense amounts is true</description>
    <inlineHelpText>if checked, budget default using existing expense amounts is true</inlineHelpText>
    <label>Budget Def using Existing Expense Amount</label>
    <type>Checkbox</type>
</CustomField>