force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Budget_Effective_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Effective_Date_Required__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Budget effective date is required, if set to true</description>
    <inlineHelpText>Budget effective date is required, if set to true</inlineHelpText>
    <label>Budget Effective Date Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>