force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Budget_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Name_Suffix__c</fullName>
    <defaultValue>&quot;-Budget&quot;</defaultValue>
    <description>Suffix for Budget Name</description>
    <inlineHelpText>Suffix for Budget Name</inlineHelpText>
    <label>Budget_Name_Suffix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>