force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Budget_Type_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Type_Picklist_Values__c</fullName>
    <defaultValue>&quot;Vendor Purchase Order Change Request, Customer Purchase Order, Customer Purchase Order Change Request, Work Order, Internal Budget, Internal Budget Change Request&quot;</defaultValue>
    <description>Picklist Values for type of Budget</description>
    <inlineHelpText>Picklist Values for type of Budget</inlineHelpText>
    <label>Budget Type Picklist Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>