force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Default_Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Budget_Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>Default Status for Budget</description>
    <inlineHelpText>Default Status for Budget</inlineHelpText>
    <label>Default Budget Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>