force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Default_Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Budget_Type__c</fullName>
    <defaultValue>&quot;Customer Purchase Order&quot;</defaultValue>
    <description>Default type of Budget</description>
    <inlineHelpText>Default type of Budget</inlineHelpText>
    <label>Default Budget Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>