force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Default_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, default value for is active is true</description>
    <inlineHelpText>If checked, default value for is active is true</inlineHelpText>
    <label>Default Is Active</label>
    <type>Checkbox</type>
</CustomField>