force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Default_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Project_Name__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, default project name is true</description>
    <inlineHelpText>If checked, default project name is true</inlineHelpText>
    <label>Default Project Name</label>
    <type>Checkbox</type>
</CustomField>