force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Default_Time_Credited__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Time_Credited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, default time is credited</description>
    <inlineHelpText>If checked, default time is credited</inlineHelpText>
    <label>Default Time Credited</label>
    <type>Checkbox</type>
</CustomField>