force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Group_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Group_Required__c</fullName>
    <defaultValue>&quot;false&quot;</defaultValue>
    <description>Decides if Group is required to create a Project</description>
    <inlineHelpText>Decides if Group is required to create a Project</inlineHelpText>
    <label>Group Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>