force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Owner_Id_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Owner_Id_Required__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Owner Id is required, if set to true</description>
    <inlineHelpText>Owner Id is required, if set to true</inlineHelpText>
    <label>Owner Id Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>