force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Practice_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice_Required__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Decides if practice is required to craete a project</description>
    <inlineHelpText>Decides if practice is required to craete a project</inlineHelpText>
    <label>Practice Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>