force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Project_Manager_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Manager_Required__c</fullName>
    <defaultValue>&quot;false&quot;</defaultValue>
    <description>Project Manager is required, if set to true</description>
    <inlineHelpText>Project Manager is required, if set to true</inlineHelpText>
    <label>Project Manager Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>