force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Project_Name_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Name_Required__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Project Name is required, if set to true</description>
    <inlineHelpText>Project Name is required, if set to true</inlineHelpText>
    <label>Project Name Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>