force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Project_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Name_Suffix__c</fullName>
    <defaultValue>&quot;-Project&quot;</defaultValue>
    <description>Suffix for Project Name</description>
    <inlineHelpText>Suffix for Project Name</inlineHelpText>
    <label>Project Name Suffix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>