force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Budget_Prebilled_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Budget_Prebilled_Amount__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays Budget Prebilled Amount, if set to true</description>
    <inlineHelpText>Displays Budget Prebilled Amount, if set to true</inlineHelpText>
    <label>Show Budget Prebilled Amount</label>
    <length>5</length>
    <type>Text</type>
</CustomField>