force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_End_Date__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays End Date, if set to true</description>
    <inlineHelpText>Displays End Date, if set to true</inlineHelpText>
    <label>Show End Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>