force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Is_Active__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays is active, if set to true</description>
    <inlineHelpText>Displays is active, if set to true</inlineHelpText>
    <label>Show Is Active</label>
    <length>5</length>
    <type>Text</type>
</CustomField>