force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Opportunity_Owner__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays Opportunity owner, if set to true</description>
    <inlineHelpText>Displays Opportunity owner, if set to true</inlineHelpText>
    <label>Show Opportunity Owner</label>
    <length>5</length>
    <type>Text</type>
</CustomField>