force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Owner_Id__c</fullName>
    <defaultValue>&quot;false&quot;</defaultValue>
    <description>Displays owner id, if true</description>
    <inlineHelpText>Displays owner id, if true</inlineHelpText>
    <label>Show Owner Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>