force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Practice__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays Practice, if true</description>
    <inlineHelpText>Displays Practice, if true</inlineHelpText>
    <label>Show Practice</label>
    <length>5</length>
    <type>Text</type>
</CustomField>