force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Project_Name__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays project name, if true</description>
    <inlineHelpText>Displays project name, if true</inlineHelpText>
    <label>Show Project Name</label>
    <length>5</length>
    <type>Text</type>
</CustomField>