force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Resource_Requests__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Resource_Requests__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays resource requests, if set to true</description>
    <inlineHelpText>Displays resource requests, if set to true</inlineHelpText>
    <label>Show Resource Requests</label>
    <length>5</length>
    <type>Text</type>
</CustomField>