force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Start_Date__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays Start date, if true</description>
    <inlineHelpText>Displays Start date, if true</inlineHelpText>
    <label>Show Start Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>