force-app/main/default/objects/pse__Create_Project_Global__c/fields/pse__Show_Time_Credited__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Time_Credited__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <description>Displays Time Credited, if set to true</description>
    <inlineHelpText>Displays Time Credited, if set to true</inlineHelpText>
    <label>Show Time Credited</label>
    <length>5</length>
    <type>Text</type>
</CustomField>